@@ -3,6 +3,8 @@ Changelog file for Login component.
 Login 1.6.5
 ====================================
 - [#5176] Fix issue with Registration in Revo 2.0 installations
+- Fix issue with some error messages not being wrapped with errTpl
+- Email validator now only checks for email validation, not required status
 
 Login 1.6.4
 ====================================
